--- a/style.css
+++ b/style.css
@@ -4,18 +4,22 @@ body {
 	height: 100%;
 	max-height: 100%;
 	font-family: Georgia, serif;
-	background: #F2F4FF;
+	background: #FFFFFF;
 }
 
 p {
 	line-height: 1.2em;
 }
 
-h2 {
-	text-transform: uppercase;
+h3 {
 	font-size: 1.2em;
-	color: #252FB3;
+	color: #85CD00;
 }
+
+table {
+	border: 1;
+	cellpadding: 4;
+	}
 
 ul {
 	list-style-type: none;
@@ -27,45 +31,72 @@ a {
 	display: block;
 	width: 100%;
 	text-decoration: none;
-	color: 081078;
+	color: #BADFD4;
 }
 
 a:hover{
-	color: #252DA1;
+	color: #43AE7C;
 }
 
 /*Layout*/
+img.head-pic{
+max-height: 10em;
+margin-top: 10px;
+margin-right:20px;
+float: left;
+}
+
+li.sidemenu{
+font-size:1.2em;
+margin: 10px;
+}
+
+a.side{
+display:block;
+width: 8em;
+background-color: #D4F2F2;
+margin: 20px;
+padding:5px;
+font-style: sans-serif;
+color:#000000
+}
+
+a.side:hover{
+background-color: #43AE7C;
+}
+
 #header-wrapper {
 	position: absolute;
 	width: 100%;
 	top: 0;
 	left: 0;
-	height: 9em;
-	background: #A1A7FF;
+	height: 12em;
+	background: #000000;
 }
 
 #header {
 	position: absolute;
-	left: 4em;
-	height: 8em;
-	background: #A1A7FF;
+	left: 3em;
+	width: 100%;
+	height : 12em;
+	background: #000000;
 }
 
 #bar-wrapper {
 	position: absolute;
-	top: 9em;
+	top: 12em;
 	left: 0;
-	width: 15em;
+	width: 17em;
 	height: 100%;
-	background: #CCCFFF;
+	background: #85CD00;
 }
 
 #bar {
 	position: absolute;
-	top: 0;
+	top: 20px;
 	left: 0;
-	width: 15em;
-	background: #CCCFFF;
+	width: 17em;
+	background: #85CD00;
 	padding-top: 1em;
 }
 
@@ -74,7 +105,7 @@ a:hover{
 }
 
 #content {
-	margin-left: 15em;
-	margin-top: 8em;
+	margin-left: 16em;
+	margin-top: 12em;
 	padding: 2em 4em;
 }
