--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ background-color: #43AE7C;
 
 #content-wrapper{
 width: 100%;
+background-color: #FF15C5;
 }
 
 #content {
@@ -109,4 +110,5 @@ width: 100%;
 	margin-left: 16em;
 	margin-top: 12em;
 	padding: 2em 4em;
+	background-color: #FF9F15;
 }
