content styling edit

--- a/style.css
+++ b/style.css
@@ -107,8 +107,8 @@ background-color: #FF15C5;
 
 #content {
 width: 100%;
-	margin-left: 16em;
+	/*margin-left: 16em;
 	margin-top: 12em;
-	padding: 2em 4em;
+	padding: 2em 4em;*/
 	background-color: #FF9F15;
 }
