content styling edit

--- a/style.css
+++ b/style.css
@@ -102,13 +102,14 @@ background-color: #43AE7C;
 
 #content-wrapper{
 width: 100%;
-background-color: #FF15C5;
+
+/*background-color: #FF15C5;*/
 }
 
 #content {
 width: 100%;
-	margin-left: 16em;
+	margin-left: 17em;
 	margin-top: 12em;
 	padding: 2em 4em;
-	background-color: #FF9F15;
+	/*background-color: #FF9F15;*/
 }
