--- a/style.css
+++ b/style.css
@@ -110,6 +110,6 @@ width: 100%;
 width: 100%;
 	margin-left: 17em;
 	margin-top: 12em;
-	padding: 2em 4em;
+	/*padding: 2em 4em;
 	/*background-color: #FF9F15;*/
 }
