--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@ width: 100%;
 
 #content {
 width: 100%;
-	margin-left: 17em;
-	margin-top: 12em;
+	margin-left: 19em;
+	/*margin-top: 12em;
 	/*padding: 2em 4em;
 	/*background-color: #FF9F15;*/
 }
