--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ background-color: #43AE7C;
 
 #bar {
 	position: absolute;
-	top: 200px;
+	/*top: 200px;*/
 	left: 0;
 	width: 250px;
 	background: #85CD00;
@@ -110,6 +110,6 @@ width: 100%;
 	width: 100%;
 	margin-left: 250px;
 	margin-top: 200px;
-	/*padding: 2em 4em;
+	padding: 2em 4em;
 	/*background-color: #FF9F15;*/
 }
