--- a/style.css
+++ b/style.css
@@ -21,16 +21,18 @@ h2{
 }
 
 table {
-	padding: 4;
 	background: #E0FF9E;
+	border-collapse: collapse;
 	}
 	
 th {
+padding: 0 1em;
 max-width: 250px;
 border-bottom: 5px solid #64BB95;
 }
 
 td {
+padding: 0 1em;
 max-width: 250px;	
 border-bottom: 1px solid #64BB95;
 }
