--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h2{
 }
 
 table {
-	font: Verdana, Arial, Helvetica, sans-serif;
+	font: 11px/24px Verdana, Arial, Helvetica, sans-serif;
 	background: #E1F8FF;
 	border-collapse: collapse;
 	border-style: hidden;
